lipu-pi-nasin-sewi: big update... fix lots of typos...

--- a/lipu-pi-nasin-sewi/11.md
+++ b/lipu-pi-nasin-sewi/11.md
@@ -12,14 +12,14 @@ sidebar:
 
 {:.loseta}
 |:-:|-|-
-| 三十辐<br/>共一毂   |  | Thirty spokes join together in the hub.
-| 当其无<br/>有车之用 |  | It is because of what is not there that the cart is useful.
-| 挺埴以为器          |  | Clay is formed into a vessel.
-| 当其无<br/>有器之用 |  | It is because of its emptiness that the vessel is useful.
-| 凿户牖以为室        |  | Cut doors and windows to make a room.
-| 当其无<br/>有室之用 |  | It is because of its emptiness that the room is useful.
-| 故有之以为利        |  | Therefore, what is present is used for profit.
-| 无之以为用          |  | But it is in absence that there is usefulness.
+| 三十辐<wbr/>共一毂   | linja mute li wan la: sike wan. | Thirty spokes join together in the hub.
+| 当其无<wbr/>有车之用 |  | It is because of what is not there that the cart is useful.
+| 挺埴以为器           |  | Clay is formed into a vessel.
+| 当其无<wbr/>有器之用 |  | It is because of its emptiness that the vessel is useful.
+| 凿户牖以为室         |  | Cut doors and windows to make a room.
+| 当其无<wbr/>有室之用 |  | It is because of its emptiness that the room is useful.
+| 故有之以为利         |  | Therefore, what is present is used for profit.
+| 无之以为用           |  | But it is in absence that there is usefulness.
 
 {% include kipisi-nav.html num=11 %}
 
