--- a/lipu-pi-nasin-sewi/12.md
+++ b/lipu-pi-nasin-sewi/12.md
@@ -15,9 +15,9 @@ sidebar:
 | 五色令人目盲       |  | The five colors blind our eyes.
 | 五音令人耳聋       |  | The five tones deafen our ears.
 | 五味令人口爽       |  | The five flavors confuse our taste.
-| 驰骋畋猎<br/>令人心发狂 |  | Racing and hunting madden our minds.
-| 难得之货<br/>令人行妨   |  | Possessing rare treasures brings about harmful behavior.
-| 是以圣人<br/>为腹不为目 |  | Therefore the sage acts from his gut, and not from his eyes.
+| 驰骋畋猎<wbr/>令人心发狂 |  | Racing and hunting madden our minds.
+| 难得之货<wbr/>令人行妨   |  | Possessing rare treasures brings about harmful behavior.
+| 是以圣人<wbr/>为腹不为目 |  | Therefore the sage acts from his gut, and not from his eyes.
 | 故去彼取此         |  | He lets go of that and chooses this.
 
 {% include kipisi-nav.html num=12 %}
