--- a/lipu-pi-nasin-sewi/14.md
+++ b/lipu-pi-nasin-sewi/14.md
@@ -22,7 +22,7 @@ sidebar:
 | 故混而为一     |  | Therefore they join to become one.
 | 其上不皎       |  | Its top is not bright;
 | 其下不昧       |  | Its bottom is not dark;
-| 绳绳不可名<br/> 复归於无物 |  | Existing continuously, it cannot be named and it returns to no-thingness.
+| 绳绳不可名<wbr/> 复归于无物 |  | Existing continuously, it cannot be named and it returns to no-thingness.
 | 是谓无状之状   |  | Thus, it is called the formless form,
 | 无物之象       |  | The image of no-thing.
 | 是谓惚恍       |  | This is called the most obscure.
