--- a/lipu-pi-nasin-sewi/16.md
+++ b/lipu-pi-nasin-sewi/16.md
@@ -10,25 +10,24 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-，是谓复命。复命曰常，知常曰明。不知常，妄作凶。知常容，容乃公，公乃王，王乃天，天乃道，道乃久，没身不殆。
 {:.loseta}
 |:-:|-|-
-| 致虚极 |  | Effect vacuity to the extreme.
-| 守静篤 |  | Keep stillness whole.
-| 万物並作 |  | Myriad things act in concert.
-| 吾以观复 |  | I therefore watch their return.
-| 夫物芸芸 |  | All things flourish and each returns to its root.
-| 各复归其根 |  | Returning to the root is called quietude.
-|  |  | Quietude is called returning to life.
-|  |  | Return to life is called constant.
-|  |  | Knowing this constant is called illumination.
-|  |  | Acting arbitrarily without knowing the constant is harmful.
-|  |  | Knowing the constant is receptivity, which is impartial.
-|  |  | Impartiality is kingship.
-|  |  | Kingship is Heaven.
-|  |  | Heaven is the Way
-|  |  | the Way is eternal.
-|  |  | Though you lose the body, you do not die.
+| 致虚极                   |                                     | Effect vacuity to the extreme.
+| 守静笃                   |                                     | Keep stillness whole.
+| 万物并作                 |                                     | Myriad things act in concert.
+| 吾以观复                 |                                     | I therefore watch their return.
+| 夫物芸芸<wbr/>各复归其根 |                                     | All things flourish and each returns to its root.
+| 归根曰静                 |                                     | Returning to the root is called quietude.
+| 是谓复命                 |                                     | Quietude is called returning to life.
+| 复命曰常                 |                                     | Return to life is called constant.
+| 知常曰明                 |                                     | Knowing this constant is called illumination.
+| 不知常<wbr/>妄作凶       |                                     | Acting arbitrarily without knowing the constant is harmful.
+| 知常容<wbr/>容乃公       |                                     | Knowing the constant is receptivity, which is impartial.
+| 公乃王                   |                                     | Impartiality is kingship.
+| 王乃天                   | lawa li sewi.                       | Kingship is Heaven.
+| 天乃道                   | sewi li nasin.                      | Heaven is the Way
+| 道乃久                   | nasin sewi li tenpo ale.            | the Way is eternal.
+| 没身不殆                 | sijelo li moli la, jan li moli ala. | Though you lose the body, you do not die.
 
 {% include kipisi-nav.html num=16 %}
 
