--- a/lipu-pi-nasin-sewi/18.md
+++ b/lipu-pi-nasin-sewi/18.md
@@ -10,18 +10,16 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-大道废、有仁义。慧智出、有大伪。六亲不和、有孝慈。国家昏乱、有忠臣。
-
 {:.loseta}
 |:-:|-|-
-|  |  | When the great Way perishes
-|  |  | There is humaneness and justice.
-|  |  | When intelligence is manifest
-|  |  | There is great deception.
-|  |  | When the six relationships are not in harmony
-|  |  | There is filial piety and compassion.
-|  |  | When the country is in chaos
-|  |  | Loyal ministers appear.
+| 大道废   |  | When the great Way perishes
+| 有仁义   |  | There is humaneness and justice.
+| 智慧出   |  | When intelligence is manifest
+| 有大伪   |  | There is great deception.
+| 六亲不和 |  | When the six relationships are not in harmony
+| 有孝慈   |  | There is filial piety and compassion.
+| 国家昏乱 |  | When the country is in chaos
+| 有忠臣   |  | Loyal ministers appear.
 
 {% include kipisi-nav.html num=18 %}
 
