--- a/lipu-pi-nasin-sewi/2.md
+++ b/lipu-pi-nasin-sewi/2.md
@@ -12,8 +12,8 @@ sidebar:
 
 {:.loseta}
 |:-:|-|-
-| 天下<br/>皆知美之为美   | lukin wawa la, jan ale li sona e wawa lukin.                | All in the world recognize the beautiful as beautiful.
-| 斯恶已                  | kule jaki li tan ni.                                        | Herein lies ugliness.
+| 天下<wbr/>皆知美之为美   | lukin wawa la, jan ale li sona e wawa lukin.                | All in the world recognize the beautiful as beautiful.
+| 斯恶已                  | jaki kule li tan ni.                                        | Herein lies ugliness.
 | 皆知善之为善            | pona la, jan ale li sona e pona.                            | All recognize the good as good.
 | 斯不善已                | pona ala li tan ni.                                         | Herein lies evil.
 | 故有无相生              | sona ni la, jo li open e weka. weka li open e jo.           | Therefore — Presence and absence produce each other.
@@ -22,9 +22,9 @@ sidebar:
 | 高下相倾                | lawa li anpa e noka. noka li anpa e lawa.                   | High and low rest on each other.
 | 音声相和                | kalama li pona tawa mu. mu li pona tawa kalama.             | Sound and voice harmonize each other.
 | 前后相随                | monsi li lawa e sinpin. sinpin li lawa e monsi.             | Front and back follow each other.
-| 是以圣人<br/>处无为之事 | sona ni la, jan sewi li jo kepeken pali ala.                | Therefore the sage abides in the condition of <abbr title="unattached-action">wu-wei</abbr>.
+| 是以圣人<wbr/>处无为之事 | sona ni la, jan sewi li jo kepeken pali ala.                | Therefore the sage abides in the condition of <abbr title="unattached-action">wu-wei</abbr>.
 | 行不言之教              | kin: jan sewi li lawa kepeken nimi ala.                     | And carries out the wordless teaching.
-| 万物作<br/>焉而不辞     | ni li mama e ijo ale. taso la, ijo ale li tu ala.           | Here, the myriad things are made, yet not separated.
+| 万物作<wbr/>焉而不辞     | ni li mama e ijo ale. taso la, ijo ale li tu ala.           | Here, the myriad things are made, yet not separated.
 | 生而不有                | ni li mama li jo ala.                                       | Therefore the sage produces without possessing,
 | 为而不恃                | ni li ilo li wile ala.                                      | Acts without expectations
 | 功成而弗居              | ni li pali anu seme?                                        | And accomplishes without abiding in her accomplishments.
@@ -36,7 +36,7 @@ sidebar:
 -------
 {:#sitelen}
 
-lukin wawa la jan ale li sona e wawa lukin. kule jaki li tan ni.
+lukin wawa la jan ale li sona e wawa lukin. jaki kule li tan ni.
 pona la jan ale li sona e pona. pona ala li tan ni.
 sona ni la jo li open e weka. weka li open e jo.
 nasa ike li open e nasa pona. nasa pona li open e nasa ike.
