--- a/lipu-pi-nasin-sewi/20.md
+++ b/lipu-pi-nasin-sewi/20.md
@@ -10,35 +10,33 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-绝学无忧。唯之与阿、相去几何。善之与恶、相去若何。人之所畏、不可不畏。荒兮其未央哉。众人煕煕、如享太牢、如春登臺。我独泊兮其未兆、如婴儿之未孩。 儽儽兮若无所归。众人皆有余。而我独若遗。我愚人之心也哉。沌沌兮。俗人昭昭。我独昏昏。俗人察察。我独闷闷。澹兮其若海、 飂 兮若无止。众人皆有以。而我独顽似部。我独异於 人、而贵食母。
-
 {:.loseta}
 |:-:|-|-
-|  |  | Get rid of “learning” and there will be no anxiety.
-|  |  | How much difference is there between “yes”and “no”?
-|  |  | How far removed from each other are “good” and “evil”?
-|  |  | Yet what the people are in awe of cannot be disregarded.
-|  |  | I am scattered, never having been in a comfortable center.
-|  |  | All the people enjoy themselves, as if they are at the festival of the great sacrifice,
-|  |  | Or climbing the Spring Platform.
-|  |  | I alone remain, not yet having shown myself.
-|  |  | Like an infant who has not yet laughed.
-|  |  | Weary, like one despairing of no home to return to.
-|  |  | All the people enjoy extra
-|  |  | While I have left everything behind.
-|  |  | I am ignorant of the minds of others.
-|  |  | So dull!
-|  |  | While average people are clear and bright, I alone am dull and dim.
-|  |  | Average people know everything.
-|  |  | To me alone all seems covered.
-|  |  | So flat!
-|  |  | Like the ocean.
-|  |  | Blowing around!
-|  |  | It seems there is no place to rest.
-|  |  | Everybody has a goal in mind.
-|  |  | I alone am as ignorant as a bumpkin.
-|  |  | I alone differ from people.
-|  |  | I enjoy being nourished by the mother.
+| 绝学无忧               |  | Get rid of “learning” and there will be no anxiety.
+| 唯之与阿<wbr/>相去几何 |  | How much difference is there between “yes” and “no”?
+| 善之与恶<wbr/>相去若何 |  | How far removed from each other are “good” and “evil”?
+| 人之所畏<wbr/>不可不畏 |  | Yet what the people are in awe of cannot be disregarded.
+| 荒兮其未央哉           |  | I am scattered, never having been in a comfortable center.
+| 众人熙熙<wbr/>如享太牢 |  | All the people enjoy themselves, as if they are at the festival of the great sacrifice,
+| 如春登台               |  | Or climbing the Spring Platform.
+| 我独怕兮其未兆         |  | I alone remain, not yet having shown myself.
+| 如婴儿之未孩           |  | Like an infant who has not yet laughed.
+| 累<!--儽 not in font-->累<!--儽 not in font-->兮若无所归         |  | Weary, like one despairing of no home to return to.
+| 众人皆有馀             |  | All the people enjoy extra
+| 而我独若遗             |  | While I have left everything behind.
+| 我愚人之心也哉         |  | I am ignorant of the minds of others.
+| 沌沌兮                 |  | So dull!
+| 俗人昭昭<wbr/>我独若昏 |  | While average people are clear and bright, I alone am dull and dim.
+| 俗人察察               |  | Average people know everything.
+| 我独闷闷               |  | To me alone all seems covered.
+| 澹兮                   |  | So flat!
+| 其若海                 |  | Like the ocean.
+| 飂兮                   |  | Blowing around!
+| 若无止                 |  | It seems there is no place to rest.
+| 众人皆有以             |  | Everybody has a goal in mind.
+| 而我独顽似鄙           |  | I alone am as ignorant as a bumpkin.
+| 我独异于人             |  | I alone differ from people.
+| 而贵食母               |  | I enjoy being nourished by the mother.
 
 {% include kipisi-nav.html num=20 %}
 
