--- a/lipu-pi-nasin-sewi/21.md
+++ b/lipu-pi-nasin-sewi/21.md
@@ -10,19 +10,17 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-孔德之容、惟道是从。道之为物、惟恍惟惚。惚兮恍兮、其中有象。恍兮惚兮、其中有物。穷兮冥兮、其中有精。其精甚眞、其中有信。自古及今、其名不去、以阅 众甫。吾何以知众甫之状哉。以此。
-
 {:.loseta}
 |:-:|-|-
-|  |  | The form of great virtue is something that only the Way can follow.
-|  |  | The Way as a “thing”is only vague and obscure.
-|  |  | How obscure! How vague! In it there is form.
-|  |  | How vague! How obscure! In it are things.
-|  |  | How deep! How dark! In it there is an essence.
-|  |  | The essence is so real—therein is belief.
-|  |  | From the present to antiquity, its name has never left it, so we can examine all origins.
-|  |  | How do I know the form of all origins?
-|  |  | By this.
+| 孔德之容<wbr/>唯道是从 |  | The form of great virtue is something that only the Way can follow.
+| 道之为物<wbr/>唯恍唯惚 |  | The Way as a “thing” is only vague and obscure.
+| 忽兮恍兮<wbr/>其中有象 |  | How obscure! How vague! In it there is form.
+| 恍兮忽兮<wbr/>其中有物 |  | How vague! How obscure! In it are things.
+| 窈兮冥兮<wbr/>其中有精 |  | How deep! How dark! In it there is an essence.
+| 其精甚真<wbr/>其中有信 |  | The essence is so real— therein is belief.
+| 自古及今<wbr/>其名不去<wbr/>以阅众甫 |  | From the present to antiquity, its name has never left it, so we can examine all origins.
+| 吾何以知众甫之状哉 |  | How do I know the form of all origins?
+| 以此 |  | By this.
 
 {% include kipisi-nav.html num=21 %}
 
