--- a/lipu-pi-nasin-sewi/22.md
+++ b/lipu-pi-nasin-sewi/22.md
@@ -10,24 +10,22 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-曲则全。枉则直。洼则盈。敝则新。少则得。多则惑。是以圣人抱一、为天下式。不自见、故明。不自是、故彰。不自伐、故有功 不自务、故长。夫唯不争、故天下莫能与之争。古之所谓曲则全者、岂虚言哉。诚全而归之。
-
 {:.loseta}
 |:-:|-|-
-|  |  | The imperfect is completed.
-|  |  | The crooked is straightened.
-|  |  | The empty is filled.
-|  |  | The old is renewed.
-|  |  | With few there is attainment.
-|  |  | With much there is confusion.
-|  |  | Therefore the sage grasps the one and becomes the model for all.
-|  |  | She does not show herself, and therefore is apparent.
-|  |  | She does not affirm herself, and therefore is acknowledged.
-|  |  | She does not boast and therefore has merit.
-|  |  | She does not strive and is therefore successful.
-|  |  | It is exactly because she does not contend, that nobody can contend with her.
-|  |  | How could the ancient saying, “The imperfect is completed” be regarded as empty talk?
-|  |  | Believe in the complete and return to it.
+| 曲则全                     |  | The imperfect is completed.
+| 枉则直                     |  | The crooked is straightened.
+| 洼则盈                     |  | The empty is filled.
+| 弊则新                     |  | The old is renewed.
+| 少则得                     |  | With few there is attainment.
+| 多则惑                     |  | With much there is confusion.
+| 是以圣人抱<wbr/>一为天下式 |  | Therefore the sage grasps the one and becomes the model for all.
+| 不自见<wbr/>故明           |  | She does not show herself, and therefore is apparent.
+| 不自是<wbr/>故彰           |  | She does not affirm herself, and therefore is acknowledged.
+| 不自伐<wbr/>故有功         |  | She does not boast and therefore has merit.
+| 不自矜<wbr/>故长           |  | She does not strive and is therefore successful.
+| 夫唯不争<wbr/>故天下莫<wbr/>能与之争 |  | It is exactly because she does not contend, that nobody can contend with her.
+| 古之所谓<wbr/>曲则全者<wbr/>岂虚言哉 |  | How could the ancient saying, “The imperfect is completed” be regarded as empty talk?
+| 诚全而归之                           |  | Believe in the complete and return to it.
 
 {% include kipisi-nav.html num=22 %}
 
