--- a/lipu-pi-nasin-sewi/23.md
+++ b/lipu-pi-nasin-sewi/23.md
@@ -10,24 +10,22 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-希言自然。故飘风不终朝、骤雨不终日。孰为此者。天地。天地尚不能久、而况於人乎。故从事於道者。道者同於道、德者同於德、失者同於失。同於道者、道亦乐 得之。同於德者、德亦乐得之。同於失者、失亦乐得之。信不足焉、有不信焉。
-
 {:.loseta}
 |:-:|-|-
-|  |  | To speak little is natural.
-|  |  | Therefore a gale does not blow a whole morning
-|  |  | Nor does a downpour last a whole day.
-|  |  | Who does these things? Heaven and Earth.
-|  |  | If even Heaven and Earth cannot force perfect continuity
-|  |  | How can people expect to?
-|  |  | Therefore there is such a thing as aligning one's actions with the Way.
-|  |  | If you accord with the Way you become one with it.
-|  |  | If you accord with virtue you become one with it.
-|  |  | If you accord with loss you become one with it.
-|  |  | The Way accepts this accordance gladly.
-|  |  | Virtue accepts this accordance gladly.
-|  |  | Loss also accepts accordance gladly.
-|  |  | If you are untrustworthy, people will not trust you.
+| 希言自然                 |  | To speak little is natural.
+| 故飘风不终朝             |  | Therefore a gale does not blow a whole morning
+| 骤雨不终日               |  | Nor does a downpour last a whole day.
+| 孰为此者<wbr/>天地       |  | Who does these things? Heaven and Earth.
+| 天地尚不能久             |  | If even Heaven and Earth cannot force perfect continuity
+| 而况于人乎               |  | How can people expect to?
+| 故从事于道者             |  | Therefore there is such a thing as aligning one's actions with the Way.
+| 道者<wbr/>同于道         |  | If you accord with the Way you become one with it.
+| 德者<wbr/>同于德         |  | If you accord with virtue you become one with it.
+| 失者<wbr/>同于失         |  | If you accord with loss you become one with it.
+| 同于道者<wbr/>道亦乐得之 |  | The Way accepts this accordance gladly.
+| 同于德者<wbr/>德亦乐得之 |  | Virtue accepts this accordance gladly.
+| 同于失者<wbr/>失亦乐得之 |  | Loss also accepts accordance gladly.
+| 信不足<wbr/>焉有不信焉   |  | If you are untrustworthy, people will not trust you.
 
 {% include kipisi-nav.html num=23 %}
 
