--- a/lipu-pi-nasin-sewi/24.md
+++ b/lipu-pi-nasin-sewi/24.md
@@ -10,20 +10,18 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-企者不立。跨者不行。自见者不明。自是者不彰。自伐者无功。\[自矜者不长\]。其在道也、曰余食赘行。物或恶之。故有道者不处。
-
 {:.loseta}
 |:-:|-|-
-|  |  | Standing on tiptoe, you are unsteady.
-|  |  | Straddle-legged, you cannot go.
-|  |  | If you show yourself, you will not be seen.
-|  |  | If you affirm yourself, you will not shine.
-|  |  | If you boast, you will have no merit.
-|  |  | If you promote yourself, you will have no success.
-|  |  | Those who abide in the Way call these
-|  |  | Leftover food and wasted action
-|  |  | And all things dislike them.
-|  |  | Therefore the person of the Way does not act like this.
+| 企者不立         |  | Standing on tiptoe, you are unsteady.
+| 跨者不行         |  | Straddle-legged, you cannot go.
+| 自见者不明       |  | If you show yourself, you will not be seen.
+| 自是者不彰       |  | If you affirm yourself, you will not shine.
+| 自伐者无功       |  | If you boast, you will have no merit.
+| 自矜者不长       |  | If you promote yourself, you will have no success.
+| 其在道也<wbr/>曰 |  | Those who abide in the Way call these
+| 馀食赘行         |  | Leftover food and wasted action
+| 物或恶之         |  | And all things dislike them.
+| 故有道者不处     |  | Therefore the person of the Way does not act like this.
 
 {% include kipisi-nav.html num=24 %}
 
