--- a/lipu-pi-nasin-sewi/25.md
+++ b/lipu-pi-nasin-sewi/25.md
@@ -10,28 +10,26 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-有物混成、先天地生。寂兮寥兮。独立不改、周行而不殆。可以为天下母。吾不知其名。字之曰道。强为之名曰大。大曰逝。逝曰远。远曰反。故道大。天大。地 大。人亦大。域中有四大、而人居其一焉。人法地 地法天 天法道 道法自然。
-
 {:.loseta}
 |:-:|-|-
-|  |  | There is something that is perfect in its disorder
-|  |  | Which is born before Heaven and Earth.
-|  |  | So silent and desolate! It establishes itself without renewal.
-|  |  | Functions universally without lapse.
-|  |  | We can regard it as the Mother of Everything.
-|  |  | I don't know its name.
-|  |  | Hence, when forced to name it, I call it “Way.”
-|  |  | When forced to categorize it, I call it “great.”
-|  |  | Greatness entails transcendence.
-|  |  | Transcendence entails going-far.
-|  |  | Going-far entails return.
-|  |  | Hence, the Way is great, Heaven is great, the Earth is great
-|  |  | And the human is also great.
-|  |  | Within our realm there are four greatnesses and the human being is one of them.
-|  |  | Human beings follow the Earth.
-|  |  | Earth follows Heaven
-|  |  | Heaven follows the Way
-|  |  | The Way follows things as they are.
+| 有物混成                     |  | There is something that is perfect in its disorder
+| 先天地生                     |  | Which is born before Heaven and Earth.
+| 寂兮寥兮<wbr/>独立不改       |  | So silent and desolate! It establishes itself without renewal.
+| 周行而不殆                   |  | Functions universally without lapse.
+| 可以为天下母                 |  | We can regard it as the Mother of Everything.
+| 吾不知其名                   |  | I don't know its name.
+| 字之曰道                     |  | Hence, when forced to name it, I call it “Way.”
+| 强为之名曰大                 |  | When forced to categorize it, I call it “great.”
+| 大曰逝                       |  | Greatness entails transcendence.
+| 逝曰远                       |  | Transcendence entails going-far.
+| 远曰反                       |  | Going-far entails return.
+| 故道大<wbr/>天大<wbr/>地大   |  | Hence, the Way is great, Heaven is great, the Earth is great
+| 王亦大                       |  | And the human is also great.
+| 域中有四大<wbr/>而王居其一焉 |  | Within our realm there are four greatnesses and the human being is one of them.
+| 人法地                       |  | Human beings follow the Earth.
+| 地法天                       |  | Earth follows Heaven
+| 天法道                       |  | Heaven follows the Way
+| 道法自然                     |  | The Way follows things as they are.
 
 {% include kipisi-nav.html num=25 %}
 
