--- a/lipu-pi-nasin-sewi/26.md
+++ b/lipu-pi-nasin-sewi/26.md
@@ -10,21 +10,19 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-重为轻根、静为躁君。是以圣人、终日行不离輜重。虽有荣观、燕处超然。奈何万乘之主、而以身轻天下、轻则失本、躁则失君。
-
 {:.loseta}
 |:-:|-|-
-|  |  | Heaviness is the root of lightness.
-|  |  | Composure is the ruler of instability.
-|  |  | Therefore the sage travels all day
-|  |  | Without putting down his heavy load.
-|  |  | Though there may be spectacles to see
-|  |  | He easily passes them by.
-|  |  | This being so
-|  |  | How could the ruler of a large state
-|  |  | Be so concerned with himself as to ignore the people?
-|  |  | If you take them lightly you will lose your roots.
-|  |  | If you are unstable, you will lose your rulership.
+| 重为轻根             |  | Heaviness is the root of lightness.
+| 静为躁君             |  | Composure is the ruler of instability.
+| 是以圣人<wbr/>终日行 |  | Therefore the sage travels all day
+| 不离辎重             |  | Without putting down his heavy load.
+| 虽有荣观             |  | Though there may be spectacles to see
+| 燕处超然             |  | He easily passes them by.
+| 奈何                 |  | This being so
+| 万乘之主             |  | How could the ruler of a large state
+| 而以身轻天下         |  | Be so concerned with himself as to ignore the people?
+| 轻则失本             |  | If you take them lightly you will lose your roots.
+| 躁则失君             |  | If you are unstable, you will lose your rulership.
 
 {% include kipisi-nav.html num=26 %}
 
