--- a/lipu-pi-nasin-sewi/29.md
+++ b/lipu-pi-nasin-sewi/29.md
@@ -10,26 +10,21 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-將欲取天下而为之、吾见其不得已。天下神器。不可为也。为者败之、执者失之。故物或行或隨、或歔或吹、或强或羸、或载或 隳 。是以圣人、去甚、去奢、去泰。
-
 {:.loseta}
 |:-:|-|-
-|  |  | If you want to grab the world and run it
-|  |  | I can see that you will not succeed.
-|  |  | The world is a spiritual vessel, which can't be controlled.
-|  |  | Manipulators mess things up.
-|  |  | Grabbers lose it. Therefore:
-|  |  | Sometimes you lead
-|  |  | Sometimes you follow
-|  |  | Sometimes you are stifled
-|  |  | Sometimes you breathe easy
-|  |  | Sometimes you are strong
-|  |  | Sometimes you are weak
-|  |  | Sometimes you destroy
-|  |  | And sometimes you are destroyed.
-|  |  | Hence, the sage shuns excess
-|  |  | Shuns grandiosity
-|  |  | Shuns arrogance.
+| 将欲取天下而为之       |  | If you want to grab the world and run it
+| 吾见其不得已           |  | I can see that you will not succeed.
+| 天下神器<wbr/>不可为也 |  | The world is a spiritual vessel, which can't be controlled.
+| 为者败之               |  | Manipulators mess things up.
+| 执者失之               |  | Grabbers lose it.
+| 故物                   |  | Therefore:
+| 或行或随               |  | Sometimes you lead[,] Sometimes you follow[.]
+| 或歔或吹               |  | Sometimes you are stifled[,] Sometimes you breathe easy[.]
+| 或强或羸               |  | Sometimes you are strong[,] Sometimes you are weak[.]
+| 或挫或隳               |  | Sometimes you destroy[,] And sometimes you are destroyed.
+| 是以圣人去甚           |  | Hence, the sage shuns excess
+| 去奢                   |  | Shuns grandiosity
+| 去泰                   |  | Shuns arrogance.
 
 {% include kipisi-nav.html num=29 %}
 
