--- a/lipu-pi-nasin-sewi/30.md
+++ b/lipu-pi-nasin-sewi/30.md
@@ -10,27 +10,25 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-以道佐人主者、不以兵强天下。其事好还。师之所处、荆棘生焉。大军之后、必有凶年。善者果而已。不敢以取强。果而勿矜、果而勿伐、果而勿骄。果而不得已、 果而勿强。物壮则老、是谓不道。不道早已。
-
 {:.loseta}
 |:-:|-|-
-|  |  | If you used the Way as a principle for ruling
-|  |  | You would not dominate the people by military force.
-|  |  | What goes around comes around.
-|  |  | Where the general has camped
-|  |  | Thorns and brambles grow.
-|  |  | In the wake of a great army
-|  |  | Come years of famine.
-|  |  | If you know what you are doing
-|  |  | You will do what is necessary and stop there, not daring to use force.
-|  |  | Accomplish but don't boast
-|  |  | Accomplish without show
-|  |  | Accomplish without arrogance
-|  |  | Accomplish without grabbing
-|  |  | Accomplish without forcing.
-|  |  | When things flourish they decline.
-|  |  | This is called non-Way
-|  |  | The non-Way is short-lived.
+| 以道佐人主者 |  | If you used the Way as a principle for ruling
+| 不以兵强天下 |  | You would not dominate the people by military force.
+| 其事好还     |  | What goes around comes around.
+| 师之所处     |  | Where the general has camped
+| 荆棘生焉     |  | Thorns and brambles grow.
+| 大军之后     |  | In the wake of a great army
+| 必有凶年     |  | Come years of famine.
+| 善有果而已   |  | If you know what you are doing
+| 不敢以取强   |  | You will do what is necessary and stop there, not daring to use force.
+| 果而勿矜     |  | Accomplish but don't boast
+| 果而勿伐     |  | Accomplish without show
+| 果而勿骄     |  | Accomplish without arrogance
+| 果而不得已   |  | Accomplish without grabbing
+| 果而勿强     |  | Accomplish without forcing.
+| 物壮则老     |  | When things flourish they decline.
+| 是谓不道     |  | This is called non-Way
+| 不道早已     |  | The non-Way is short-lived.
 
 {% include kipisi-nav.html num=30 %}
 
