--- a/lipu-pi-nasin-sewi/31.md
+++ b/lipu-pi-nasin-sewi/31.md
@@ -10,31 +10,30 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-夫佳兵者不祥之器、物或恶之。故有道者不处。君子居则贵左、用兵则贵右。兵者不祥之器、非君子之器。不得已而用之、恬淡为上。胜而不美。而美之者、是乐杀 人。夫乐杀人者、则不可以得志於天下矣。吉事尚左、凶事尚右。偏將军居左、上將军居右。言以丧礼处之。杀人之众、以哀悲泣之、战胜以丧礼处之。
-
 {:.loseta}
 |:-:|-|-
-|  |  | Sharp weapons are inauspicious instruments.
-|  |  | Everyone hates them.
-|  |  | Therefore the man of the Way is not comfortable with them.
-|  |  | In the domestic affairs of the gentleman
-|  |  | The left is the position of honor.
-|  |  | In military affairs the right is the position of honor.
-|  |  | Since weapons are inauspicious instruments, they are not the instruments of the gentleman
-|  |  | So he uses them without enjoyment
-|  |  | And values plainness.
-|  |  | Victory is never sweet.
-|  |  | Those for whom victory is sweet
-|  |  | Are those who enjoy killing.
-|  |  | If you enjoy killing, you cannot gain the trust of the people.
-|  |  | On auspicious occasions the place of honor is on the left.
-|  |  | On inauspicious occasions the place of honor is on the right.
-|  |  | The lieutenant commander stands on the left.
-|  |  | The commander-in-chief stands on the right.
-|  |  | And they speak, using the funerary rites to bury them.
-|  |  | The common people, from whom all the dead have come
-|  |  | Weep in lamentation.
-|  |  | The victors bury them with funerary rites.
+| 夫佳兵者<wbr/>不祥之器     |  | Sharp weapons are inauspicious instruments.
+| 物或恶之                   |  | Everyone hates them.
+| 故有道者不处               |  | Therefore the man of the Way is not comfortable with them.
+| 君子居则贵左               |  | In the domestic affairs of the gentleman
+| 用兵则贵右                 |  | The left is the position of honor.
+| 兵者不祥之器               |  | In military affairs the right is the position of honor.
+| 非君子之器                 |  | Since weapons are inauspicious instruments, they are not the instruments of the gentleman
+| 不得已而用之               |  | So he uses them without enjoyment
+| 恬淡为上                   |  | And values plainness.
+| 胜而不美                   |  | Victory is never sweet.
+| 而美之者                   |  | Those for whom victory is sweet
+| 是乐杀人                   |  | Are those who enjoy killing.
+| 夫乐杀人者                 |  | If you enjoy killing,
+| 则不可以<wbr/>得志于天下矣 |  | [Y]ou cannot gain the trust of the people.
+| 吉事尚左                   |  | On auspicious occasions the place of honor is on the left.
+| 凶事尚右                   |  | On inauspicious occasions the place of honor is on the right.
+| 偏将军居左                 |  | The lieutenant commander stands on the left.
+| 上将军居右                 |  | The commander-in-chief stands on the right.
+| 言以丧礼处之               |  | And they speak, using the funerary rites to bury them.
+| 杀人之众                   |  | The common people, from whom all the dead have come
+| 以哀悲泣之                 |  | Weep in lamentation.
+| 战胜以丧礼处之             |  | The victors bury them with funerary rites.
 
 {% include kipisi-nav.html num=31 %}
 
