--- a/lipu-pi-nasin-sewi/33.md
+++ b/lipu-pi-nasin-sewi/33.md
@@ -10,18 +10,16 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-知人者智、自知者明。胜人者有力、自胜者强。知足者富。强行者有志。不失其所者久。死而不亡者寿。
-
 {:.loseta}
 |:-:|-|-
-|  |  | If you understand others you are smart.
-|  |  | If you understand yourself you are illuminated.
-|  |  | If you overcome others you are powerful.
-|  |  | If you overcome yourself you have strength.
-|  |  | If you know how to be satisfied you are rich.
-|  |  | If you can act with vigor, you have a will.
-|  |  | If you don't lose your objectives you can be long-lasting.
-|  |  | If you die without loss, you are eternal.
+| 知人者智     | sina ken sona e jan ante la, sina sona. | If you understand others[,]<wbr/> you are smart.
+| 自知者明     | sina ken sona e sina la, sina suno. | If you understand yourself[,]<wbr/> you are illuminated.
+| 胜人者有力   | sina ken utala e jan ante la, sina wawa. | If you overcome others[,]<wbr/> you are powerful.
+| 自胜者强     | sina ken utala e sina la, sina suli. | If you overcome yourself[,]<wbr/> you have strength.
+| 知足者富     |  | If you know how to be satisfied[,]<wbr/> you are rich.
+| 强行者有志   |  | If you can act with vigor,<wbr/> you have a will.
+| 不失其所者久 |  | If you don't lose your objectives[,]<wbr/> you can be long-lasting.
+| 死而不亡者寿 |  | If you die without loss,<wbr/> you are eternal.
 
 {% include kipisi-nav.html num=33 %}
 
