--- a/lipu-pi-nasin-sewi/34.md
+++ b/lipu-pi-nasin-sewi/34.md
@@ -10,19 +10,17 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-大道氾兮、其可左右。万物恃之而生 而不辞。功成不名有。衣养万物而不为主。常无欲、可名於小。万物归焉而不为主、可名为大。以其终不自为大、故能成其大。
-
 {:.loseta}
 |:-:|-|-
-|  |  | The great Way flows over, spreading in every direction.
-|  |  | The myriad things are produced relying on it, but it does not distinguish them.
-|  |  | It brings them to completion without claiming possession.
-|  |  | It clothes and feeds all things without lording over them.
-|  |  | Always desireless, it can be called “the small.”
-|  |  | The myriad things rely on it and it doesn't true to rule them
-|  |  | Thus it can be called “great.”
-|  |  | Till the end, it does not regard itself as Great.
-|  |  | Therefore it able to be great.
+| 大道泛兮<wbr/>其可左右   |  | The great Way flows over, spreading in every direction.
+| 万物恃之<wbr/>而生而不辞 |  | The myriad things are produced relying on it, but it does not distinguish them.
+| 功成不名有               |  | It brings them to completion without claiming possession.
+| 衣养万物<wbr/>而不为主   |  | It clothes and feeds all things without lording over them.
+| 常无欲<wbr/>可名于小     |  | Always desireless, it can be called “the small.”
+| 万物归焉<wbr/>而不为主   |  | The myriad things rely on it and it doesn't tr[y] to rule them
+| 可名为大                 |  | Thus it can be called “great.”
+| 以其终不自为大           |  | Till the end, it does not regard itself as Great.
+| 故能成其大               |  | Therefore it able to be great.
 
 {% include kipisi-nav.html num=34 %}
 
