--- a/lipu-pi-nasin-sewi/35.md
+++ b/lipu-pi-nasin-sewi/35.md
@@ -10,22 +10,19 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-执大象、天下往。往而不害、安平太。乐与饵、过客止。道之出口、淡乎其无味。视之不足见。听之不足闻。用之不可旣。
-
 {:.loseta}
 |:-:|-|-
-|  |  | Grasping to the Great Form
-|  |  | All in the world go proceed forth. [^2]
-|  |  | Proceeding forth unharmed, they rest in calm peace.
-|  |  | It is for food and music that the passing traveler stops.
-|  |  | When the Way emerges from its opening
-|  |  | It is insipid, having no taste.
-|  |  | Look at it, you cannot see it.
-|  |  | Listen, you cannot hear it.
-|  |  | Use it
-|  |  | You cannot exhaust it.
+| 执大象               |  | Grasping to the Great Form
+| 天下往               |  | All in the world go proceed forth. [^1]
+| 往而不害<wbr/>安平太 |  | Proceeding forth unharmed, they rest in calm peace.
+| 乐与饵<wbr/>过客止   |  | It is for food and music that the passing traveler stops.
+| 道之出口             |  | When the Way emerges from its opening
+| 淡乎<wbr/>其无味     |  | It is insipid, having no taste.
+| 视之<wbr/>不足见     |  | Look at it, you cannot see it.
+| 听之<wbr/>不足闻     |  | Listen, you cannot hear it.
+| 用之<wbr/>不可既     |  | Use it[, y]ou cannot exhaust it.
 
-[^2]: [Miller:] As far as I can tell, I am the only translator who takes 往 as “going forth” rather than “come.” Where in any other text do we see the rendering of “come”? I take it to mean that if people will hold on to the Dao as they go out in the world, they won't have trouble, and will enjoy peace and calm. This seems to accord with the general message of the Daodejing.
+[^1]: [Miller:] "As far as I can tell, I am the only translator who takes 往 as “going forth” rather than “come.” Where in any other text do we see the rendering of “come”? I take it to mean that if people will hold on to the Dao as they go out in the world, they won't have trouble, and will enjoy peace and calm. This seems to accord with the general message of the Daodejing."
 
 {% include kipisi-nav.html num=35 %}
 
