--- a/lipu-pi-nasin-sewi/37.md
+++ b/lipu-pi-nasin-sewi/37.md
@@ -10,20 +10,18 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-道常无为而无不为。侯王若能守之、万物將自化。化而欲作、吾將鎭之以无名之朴。无名之朴、夫亦將无欲。不欲以静、天下將自定。
-
 {:.loseta}
 |:-:|-|-
-|  |  | The Way is always “not-doing”
-|  |  | Yet there is nothing it doesn't do.
-|  |  | If the rulers are were able to embody it
-|  |  | Everyone will naturally be changed.
-|  |  | Being changed, they desire to do things.
-|  |  | So I must restrain them, using the nameless “uncarved block.”
-|  |  | Using the nameless uncarved block
-|  |  | They become desireless.
-|  |  | Desireless, they are tranquil and
-|  |  | All-under-Heaven is naturally settled.
+| 道常无为 |  | The Way is always “not-doing”
+| 而无不为 |  | Yet there is nothing it doesn't do.
+| 侯王若能守之 |  | If the rulers are were able to embody it
+| 万物将自化 |  | Everyone will naturally be changed.
+| 化而欲作 |  | Being changed, they desire to do things.
+| 吾将镇<wbr/>之以<wbr/>无名之朴 |  | So I must restrain them, using the nameless “uncarved block.”
+| 无名之朴 |  | Using the nameless uncarved block
+| 夫亦将无欲 |  | They become desireless.
+| 不欲以静 |  | Desireless, they are tranquil and
+| 天下将自定 |  | All-under-Heaven is naturally settled.
 
 {% include kipisi-nav.html num=37 %}
 
