--- a/lipu-pi-nasin-sewi/38.md
+++ b/lipu-pi-nasin-sewi/38.md
@@ -10,36 +10,34 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-上德不德、是以有德。下德不失德、是以无德。上德无为而无以为、下德为之而有以为。上仁为之而无以为。上义为之而有以为。上礼为之而莫之应、则攘臂而 扔 之。故失道而后、德。失德而后、仁。失仁而后、义。失义而后、礼。夫礼者、忠信之薄、而乱之首。前识者、道之华、而愚之始。是以大丈夫处其厚、不居其薄。处其实、不居其华。 故、去彼、取此。
 {:.loseta}
-| Toki Pna | Chinese | English
 |-:|:-:|:-
-|  |  | Superior virtue is not virtuous
-|  |  | Therefore it has virtue.
-|  |  | Inferior virtue never fails to be virtuous
-|  |  | Therefore it has no virtue.
-|  |  | Superior virtue does not “act”
-|  |  | And has no intentions.
-|  |  | Inferior virtue “acts”
-|  |  | And always has intentions.
-|  |  | Superior humaneness“acts”
-|  |  | But has no intentions.
-|  |  | Superior justice “acts”
-|  |  | But but has intentions.
-|  |  | Superior propriety “acts”and if you don't respond
-|  |  | They will roll up their sleeves and threaten you.
-|  |  | Thus, when the Way is lost there is virtue
-|  |  | When virtue is lost there is humaneness
-|  |  | When humaneness is lost there is justice
-|  |  | And when justice is lost there is propriety.
-|  |  | Now “propriety”is the external appearance of loyalty and sincerity
-|  |  | And the beginning of disorder.
-|  |  | Occult abilities are just flowers of the Way
-|  |  | And the beginning of foolishness.
-|  |  | Therefore the Great Person dwells in the substantial
-|  |  | And not in the superficial.
-|  |  | Rests in the fruit and not in the flower.
-|  |  | So let go of that and grasp this.
+| 上德不德               |  | Superior virtue is not virtuous
+| 是以有德               |  | Therefore it has virtue.
+| 下德不失德             |  | Inferior virtue never fails to be virtuous
+| 是以无德               |  | Therefore it has no virtue.
+| 上德无为               |  | Superior virtue does not “act”
+| 而无以为               |  | And has no intentions.
+| 下德为之               |  | Inferior virtue “acts”
+| 而有以为               |  | And always has intentions.
+| 上仁为之               |  | Superior humaneness “acts”
+| 而无以为               |  | But has no intentions.
+| 上义为之               |  | Superior justice “acts”
+| 而有以为               |  | But but has intentions.
+| 上礼为之<wbr/>而莫之应 |  | Superior propriety “acts” and if you don't respond
+| 则攘臂<wbr/>而扔之     |  | They will roll up their sleeves and threaten you.
+| 故失道<wbr/>而后德     |  | Thus, when the Way is lost there is virtue
+| 失德<wbr/>而后仁       |  | When virtue is lost there is humaneness
+| 失仁<wbr/>而后义       |  | When humaneness is lost there is justice
+| 失义<wbr/>而后礼       |  | And when justice is lost there is propriety.
+| 夫礼者<wbr/>忠信之薄   |  | Now “propriety” is the external appearance of loyalty and sincerity
+| 而乱之首               |  | And the beginning of disorder.
+| 前识者<wbr/>道之华     |  | Occult abilities are just flowers of the Way
+| 而愚之始               |  | And the beginning of foolishness.
+| 是以大丈<wbr/>夫处其厚 |  | Therefore the Great Person dwells in the substantial
+| 不居其薄               |  | And not in the superficial.
+| 处其实<wbr/>不居其华   |  | Rests in the fruit and not in the flower.
+| 故去彼取此             | la o weka. o jo e ni. | So let go of that and grasp this.
 
 {% include kipisi-nav.html num=38 %}
 
