--- a/lipu-pi-nasin-sewi/40.md
+++ b/lipu-pi-nasin-sewi/40.md
@@ -10,14 +10,12 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-反者道之动。弱者道之用。天下万物生於有、有生於无。
-
 {:.loseta}
 |:-:|-|-
-|  |  | Return is the motion of the Way.
-|  |  | Softening is its function.
-|  |  | All things in the cosmos arise from being.
-|  |  | Being arises from non-being.
+| 反者道之动     |  | Return is the motion of the Way.
+| 弱者道之用     |  | Softening is its function.
+| 天下万物<wbr/>生于有 |  | All things in the cosmos arise from being.
+| 有生于无       |  | Being arises from non-being.
 
 {% include kipisi-nav.html num=40 %}
 
