--- a/lipu-pi-nasin-sewi/41.md
+++ b/lipu-pi-nasin-sewi/41.md
@@ -10,21 +10,20 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-上士闻道、勤而行之。中士闻道、若存若亡。下士闻道、大笑之。不笑不足以为道。故建言有之。明道若昧。进道若退。夷道若 纇 。上德若谷。大白若辱。广德若不足。建德若偸。 质眞若渝 大方无隅。大器晩成。大音希声。大象无形。道隱无名 夫唯道、善贷且成。
-
+；上德若谷；太白若辱；广德若不足；建德若偷；质真若渝；大方无隅；大器晚成；大音希声；大象无形；道隐无名。夫唯道，善贷且成。
 {:.loseta}
 |:-:|-|-
-|  |  | When superior students hear of the Way
-|  |  | They strive to practice it.
-|  |  | When middling students hear of the Way
-|  |  | They sometimes keep it and sometimes lose it.
-|  |  | When inferior students hear of the Way
-|  |  | They have a big laugh.
-|  |  | But “not laughing”in itself is not sufficient to be called the Way, and therefore it is said:
-|  |  | The sparkling Way seems dark
-|  |  | Advancing in the Way seems like regression.
-|  |  | Settling into the Way seems rough.
-|  |  | True virtue is like a valley.
+| 上士闻道 |  | When superior students hear of the Way
+| 勤而行之 |  | They strive to practice it.
+| 中士闻道 |  | When middling students hear of the Way
+| 若存若亡 |  | They sometimes keep it and sometimes lose it.
+| 下士闻道 |  | When inferior students hear of the Way
+| 大笑之 |  | They have a big laugh.
+| 不笑不足以为道 |  | But “not laughing” in itself is not sufficient to be called the Way, and therefore it is said:
+| 故建言有之 |  | The sparkling Way seems dark
+| 明道若昧 |  | Advancing in the Way seems like regression.
+| 进道若退 |  | Settling into the Way seems rough.
+| 夷道若纇 |  | True virtue is like a valley.
 |  |  | The immaculate seems humble.
 |  |  | Extensive virtue seems insufficient.
 |  |  | Established virtue seems deceptive.
