--- a/lipu-pi-nasin-sewi/5.md
+++ b/lipu-pi-nasin-sewi/5.md
@@ -16,7 +16,7 @@ sidebar:
 | 以万物为刍狗            | ona li lawa tawa ijo ale.                  | And regard the myriad things as straw dogs.
 | 圣人不仁                | jan sewi li olin ala e jan.                | The sage is not humane,
 | 以百姓为刍狗            | ona li lawa tawa jan ale.                  | And regards all the people as straw dogs.
-| 天地之间<br/>其犹豪卫乎 | insa ma en insa sewi li sama kon.          | The space between Heaven and Earth is just like a bellows:
+| 天地之间<wbr/>其犹橐籥乎 | insa ma en insa sewi li sama kon.          | The space between Heaven and Earth is just like a bellows:
 | 虚而不屈                | jan li weka e ona la, kin ona li ken jo.   | Empty it, it is not exhausted.
 | 动而愈出                | jan li pali e ona la, kin ona li ken pana. | Squeeze it and more comes out.
 | 多言数穷                | nimi mute li nanpa ike.                    | Excessive verbiage is usually a dead end
