--- a/lipu-pi-nasin-sewi/10.md
+++ b/lipu-pi-nasin-sewi/10.md
@@ -16,15 +16,15 @@ sidebar:
 | 能无离乎   |  | Are you able to avoid separation?
 | 专气致柔   |  | Focusing your energy on the release of tension:
 | 能婴儿乎   |  | Can you be like an infant?
-| 浓除玄览   |  | In purifying your insight:
+| 涤除玄览   |  | In purifying your insight:
 | 能无疲乎   |  | Can you un-obstruct it?
 | 爱民治国   |  | Loving the people and ruling the state:
-| 能无为乎   |  | Can you avoid over-manipulation?
-| 天门开斗   |  | In opening and closing the gate of Heaven:
+| 能无知乎   |  | Can you avoid over-manipulation?
+| 天门开阖   |  | In opening and closing the gate of Heaven:
 | 能为雌乎   |  | Can you be the female?
 | 明白四达   |  | In illuminating the whole universe:
 | 能无知乎   |  | Can you be free of rationality?
-| 生之畜之   |  | Give birth to it and nourish it.
+| 生之<wbr/>畜之   |  | Give birth to it and nourish it.
 | 生而不有   |  | Produce it but don't possess it.
 | 为而不侍   |  | Act without expectation.
 | 长而不宰   |  | Excel, but don't take charge.
