--- a/lipu-pi-nasin-sewi/17.md
+++ b/lipu-pi-nasin-sewi/17.md
@@ -10,18 +10,16 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-太上、下知有之。其次、亲而誉之。其次、畏之。其次、侮之。信不足焉、有不信焉。悠兮其贵言。功成事遂、百姓皆谓我自然。
-
 {:.loseta}
 |:-:|-|-
-|  |  | From great antiquity forth they have known and possessed it.
-|  |  | Those of the next level loved and praised it.
-|  |  | The next were in awe of it.
-|  |  | And the next despised it.
-|  |  | If you lack sincerity no one will believe you.
-|  |  | How careful she is with her precious words!
-|  |  | When her work is complete and her job is finished,
-|  |  | Everybody says: “We did it!”
+| 太上<wbr/>下知有之     |  | From great antiquity forth they have known and possessed it.
+| 其次<wbr/>亲而誉之     |  | Those of the next level loved and praised it.
+| 其次<wbr/>畏之         |  | The next were in awe of it.
+| 其次<wbr/>侮之         |  | And the next despised it.
+| 信不足<wbr/>焉有不信焉 |  | If you lack sincerity no one will believe you.
+| 悠兮<wbr/>其贵言       |  | How careful she is with her precious words!
+| 功成事遂               |  | When her work is complete and her job is finished,
+| 百姓皆谓我自然         |  | Everybody says: “We did it!”
 
 {% include kipisi-nav.html num=17 %}
 
