--- a/lipu-pi-nasin-sewi/27.md
+++ b/lipu-pi-nasin-sewi/27.md
@@ -10,25 +10,23 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-善行无辙迹、善言无瑕謫、善数无用筹策。善闭无关 楗 、而不可开。善结无绳约、而不可解。是以圣人、 常善救人。故无弃人。常善救物。故无弃物。是谓袭明。故善人者、不善人之师、不善人者、善人之资、不贵其师、不爱其资。虽智大迷。是谓要妙。
-
 {:.loseta}
 |:-:|-|-
-|  |  | A good traveler leaves no tracks.
-|  |  | Good speech lacks faultfinding.
-|  |  | A good counter needs no calculator.
-|  |  | A well-shut door will stay closed without a latch.
-|  |  | Skillful fastening will stay tied without knots.
-|  |  | It is in this manner that the sage is always skillful in elevating people.
-|  |  | Therefore she does not discard anybody.
-|  |  | She is always skillful in helping things
-|  |  | Therefore she does not discard anything.
-|  |  | This is called “the actualization of her luminosity.”
-|  |  | Hence, the good are the teachers of the not-so-good.
-|  |  | And the not-so-good are the charges of the good.
-|  |  | Not valuing your teacher or not loving your students:
-|  |  | Even if you are smart, you are gravely in error.
-|  |  | This is called Essential Subtlety.
+| 善行无辙迹               |  | A good traveler leaves no tracks.
+| 善言无瑕谪               |  | Good speech lacks faultfinding.
+| 善数不用筹策             |  | A good counter needs no calculator.
+| 善闭无关楗而不可开       |  | A well-shut door will stay closed without a latch.
+| 善结无绳约而不可解       |  | Skillful fastening will stay tied without knots.
+| 是以圣人常善救人         |  | It is in this manner that the sage is always skillful in elevating people.
+| 故无弃人                 |  | Therefore she does not discard anybody.
+| 常善救物                 |  | She is always skillful in helping things
+| 故无弃物                 |  | Therefore she does not discard anything.
+| 是谓袭明                 |  | This is called “the actualization of her luminosity.”
+| 故善人者<wbr/>不善人之师 |  | Hence, the good are the teachers of the not-so-good.
+| 不善人者<wbr/>善人之资   |  | And the not-so-good are the charges of the good.
+| 不贵其师<wbr/>不爱其资   |  | Not valuing your teacher or not loving your students:
+| 虽智大迷                 |  | Even if you are smart, you are gravely in error.
+| 是谓要妙                 |  | This is called Essential Subtlety.
 
 {% include kipisi-nav.html num=27 %}
 
