--- a/lipu-pi-nasin-sewi/28.md
+++ b/lipu-pi-nasin-sewi/28.md
@@ -10,27 +10,26 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-知其雄、守其雌、为天下谿。为天下谿、常德不离、復归於婴儿。知其白、守其黑、为天下式。为天下式、常德不忒 、復归於无极。知其荣、守其辱、为天下谷。为天下谷、常德乃足、復归於朴。朴散则为器。圣人用之、则为官长。故大制不割。
-
 {:.loseta}
 |:-:|-|-
-|  |  | Know the Masculine, cleave to the Feminine
-|  |  | Be a valley for everyone.
-|  |  | Being a valley for everyone
-|  |  | You are always in virtue without lapse
-|  |  | And you return to infancy.
-|  |  | Know the White, but cleave to the Black. [^1]
-|  |  | Be a model for everyone.
-|  |  | Being a model for everyone
-|  |  | You are always in virtue and free from error
-|  |  | You return to limitlessness.
-|  |  | Know Glory but cleave to Humiliation
-|  |  | Be the valley for everyone.
-|  |  | When your constancy in virtue is complete
-|  |  | You return to the state of the “uncarved block.”
-|  |  | The block is cut into implements.
-|  |  | If the sage uses it, he ends up being an official.
-|  |  | Therefore the great tailor does not cut.
+| 知其雄<wbr/>守其雌     |  | Know the Masculine, cleave to the Feminine
+| 为天下溪               |  | Be a valley for everyone.
+| 为天下溪               |  | Being a valley for everyone[,]
+| 常德不离               |  | You are always in virtue without lapse
+| 复归于婴儿             |  | And you return to infancy.
+| 知其白<wbr/>守其黑     |  | Know the White, but cleave to the Black. [^1]
+| 为天下式               |  | Be a model for everyone.
+| 为天下式               |  | Being a model for everyone[,]
+| 常德不忒               |  | You are always in virtue and free from error
+| 复归于无极             |  | You return to limitlessness.
+| 知其荣<wbr/>守其辱     |  | Know Glory but cleave to Humiliation
+| 为天下谷               |  | Be the valley for everyone.
+| 为天下谷               |  | [Being the valley for everyone, and]
+| 常德乃足               |  | When your constancy in virtue is complete
+| 复归于朴               |  | You return to the state of the “uncarved block.”
+| 朴散则为器             |  | The block is cut into implements.
+| 圣人用之<wbr/>则为官长 |  | If the sage uses it, he ends up being an official.
+| 故大制不割             |  | Therefore the great tailor does not cut.
 
 [^1]: [Miller:] The “black” is the deep, religious, mystic part of our experience. The “white” is our involvement in mundane affairs. We should well understand how the conventional world operates, but our priority should lie in adhering to deeper principles.
 
