--- a/lipu-pi-nasin-sewi/32.md
+++ b/lipu-pi-nasin-sewi/32.md
@@ -10,24 +10,24 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-道常无名 朴虽小、天下莫能臣也。侯王若能守之、万物將自宾。天地相合、以降甘露。民莫之令而自均。始制有名。名亦旣有、夫亦將知止。知止所以不殆。譬道之在天下、犹川谷 之於江海。
-
 {:.loseta}
 |:-:|-|-
-|  |  | The Way is always nameless.
-|  |  | And even though a sapling might be small
-|  |  | No one can make it be his subject.
-|  |  | If rulers could embody this principle
-|  |  | The myriad things would follow on their own.
-|  |  | Heaven and Earth would be in perfect accord
-|  |  | And rain sweet dew.
-|  |  | Without being ordered, the people naturally govern themselves.
-|  |  | And so you have the beginning of division into names.
-|  |  | Once there is a name sort something,
-|  |  | Then you should stop.
-|  |  | Knowing where to stop, you can avoid trouble.
-|  |  | The Way's existence in the world
-|  |  | Is like valley streams running into the rivers and seas.
+| 道常无名       |  | The Way is always nameless.
+| 「朴虽小」     |  | (And even though a sapling might be small) [^1]
+| 天下莫能臣也   |  | No one can make it be his subject.
+| 侯王若能守之   |  | If rulers could embody this principle
+| 万物将自宾     |  | The myriad things would follow on their own.
+| 天地相合       |  | Heaven and Earth would be in perfect accord
+| 以降甘露       |  | And rain sweet dew.
+| 民莫之令而自均 |  | Without being ordered, the people naturally govern themselves.
+| 始制有名       |  | And so you have the beginning of division into names.
+| 名亦既有       |  | Once there is a name sort something,
+| 夫亦将知止     |  | Then you should stop.
+| 知止所以不殆   |  | Knowing where to stop, you can avoid trouble.
+| 譬道之在天下   |  | The Way's existence in the world
+| 犹川谷之与江海 |  | Is like valley streams running into the rivers and seas.
+
+[^1] This triplet of characters may have been added by a later commenter?
 
 {% include kipisi-nav.html num=32 %}
 
