--- a/lipu-pi-nasin-sewi/36.md
+++ b/lipu-pi-nasin-sewi/36.md
@@ -10,23 +10,21 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-將欲歙之、必固张之。將欲弱之、必固强之。將欲废之、必固兴之。將欲夺之、必固与之。是谓微明。柔弱胜刚强。鱼不可脱於渊。国之利器、不可以示人。
-
 {:.loseta}
 |:-:|-|-
-|  |  | That which will be shrunk
-|  |  | Must first be stretched.
-|  |  | That which will be weakened
-|  |  | Must first be strengthened.
-|  |  | That which will be torn down
-|  |  | Must first be raised up.
-|  |  | That which will be taken
-|  |  | Must first be given.
-|  |  | This is called “subtle awareness.”
-|  |  | The soft and weak overcomes the hard and strong.
-|  |  | A fish should not leave the depths of the waters.
-|  |  | The country's potent weapons
-|  |  | Should not be shown to its people.
+| 将欲歙之     | <!--first ... suck thing-->  | That which will be shrunk
+| 必固张之     | <!--gotta def 张 thing-->    | Must first be stretched.
+| 将欲弱之     |                              | That which will be weakened
+| 必固强之     |                              | Must first be strengthened.
+| 将欲废之     | _wile_ lili e ilo la,        | That which will be torn down
+| 必固兴之     | tenpo open li suli e ilo ni. | Must first be raised up.
+| 将欲夺之     |                              | That which will be taken
+| 必固与之     |                              | Must first be given.
+| 是谓微明     |                              | This is called “subtle awareness.”
+| 柔弱胜刚强   |                              | The soft and weak overcomes the hard and strong.
+| 鱼不可脱于渊 |                              | A fish should not leave the depths of the waters.
+| 国之利器     |                              | The country's potent weapons
+| 不可以示人   |                              | Should not be shown to its people.
 
 {% include kipisi-nav.html num=36 %}
 
