--- a/lipu-pi-nasin-sewi/39.md
+++ b/lipu-pi-nasin-sewi/39.md
@@ -10,32 +10,30 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-昔之得一者。天得一以淸、地得一以寧、神得一以灵、谷得一以盈、万物得一以生、侯王得一以为天下贞。其致之、一也。天无以淸將恐裂。地无以寧將恐发。神无以灵將恐歇。谷无以盈將恐竭。万物无以生將恐灭。侯王无以贞將恐蹶。故贵以贱为本、高以下为基。是以侯王自谓孤寡不穀。此非以贱为本邪。非乎。故致数舆无舆。不欲琭琭如玉、珞珞如石。
 {:.loseta}
-| Toki Pna | Chinese | English
 |-:|:-:|:-
-|  |  | These in the past have attained wholeness:
-|  |  | Heaven attains wholeness with its clarity;
-|  |  | The Earth attains wholeness with its firmness;
-|  |  | The Spirit attains wholeness with its transcendence;
-|  |  | The Valley attain wholeness when filled;
-|  |  | The Myriad Things attain wholeness in life;
-|  |  | The Ruler attains wholeness in the correct governance of the people.
-|  |  | In effecting this:
-|  |  | If Heaven lacked clarity it would be divided;
-|  |  | If the Earth lacked firmness it would fly away;
-|  |  | If the spirit lacked transcendence it would be exhausted;
-|  |  | If the valley lacked fullness it would be depleted;
-|  |  | If the myriad things lacked life they would vanish.
-|  |  | If the ruler lacks nobility and loftiness he will be tripped up.
-|  |  | Hence
-|  |  | Nobility has lowliness as its root
-|  |  | The High has the Low as its base.
-|  |  | Thus the kings call themselves “the orphan, the lowly, the unworthy.”
-|  |  | Is this not taking lowliness as the fundamental? Isn't it?
-|  |  | In this way you can bring about great effect without burden.
-|  |  | Not desiring the rarity of gems
-|  |  | Or the manyness of grains of sand.
+| 昔之得一者               |  | These in the past have attained wholeness:
+| 天得一以清               |  | Heaven attains wholeness with its clarity;
+| 地得一以宁               |  | The Earth attains wholeness with its firmness;
+| 神得一以灵               |  | The Spirit attains wholeness with its transcendence;
+| 谷得一以盈               |  | The Valley attain wholeness when filled;
+| 万物得一以生             |  | The Myriad Things attain wholeness in life;
+| 侯王得一以<wbr/>为天下贞 |  | The Ruler attains wholeness in the correct governance of the people.
+| 其致之                   |  | In effecting this:
+| 天无以清<wbr/>将恐裂     |  | If Heaven lacked clarity it would be divided;
+| 地无以宁<wbr/>将恐发     |  | If the Earth lacked firmness it would fly away;
+| 神无以灵<wbr/>将恐歇     |  | If the spirit lacked transcendence it would be exhausted;
+| 谷无以盈<wbr/>将恐竭     |  | If the valley lacked fullness it would be depleted;
+| 万物无以生<wbr/>将恐灭   |  | If the myriad things lacked life they would vanish.
+| 侯王无以贵<wbr/>高将恐蹶 |  | If the ruler lacks nobility and loftiness he will be tripped up.
+| 故                       |  | Hence
+| 贵以贱为本               |  | Nobility has lowliness as its root
+| 高以下为基               |  | The High has the Low as its base.
+| 是以侯王自称孤<wbr/>寡<wbr/>不谷 |  | Thus the kings call themselves “the orphan, the lowly, the unworthy.”
+| 此非以贱为本耶<wbr/>非乎 |  | Is this not taking lowliness as the fundamental? Isn't it?
+| 故<wbr/>致数誉无誉       |  | In this way you can bring about great effect without burden.
+| 不欲琭琭如玉             |  | Not desiring the rarity of gems
+| 珞珞如石                 |  | Or the manyness of grains of sand.
 
 {% include kipisi-nav.html num=39 %}
 
