--- a/lipu-pi-nasin-sewi/6.md
+++ b/lipu-pi-nasin-sewi/6.md
@@ -15,7 +15,7 @@ sidebar:
 | 谷神不死     | kon lupa nena li moli ala.       | The valley spirit never dies.
 | 是谓玄牝     | nimi ona li meli nasa.           | It is called “the mysterious female.”
 | 玄牝之门     | lupa pi meli nasa la,            | The opening of the mysterious female
-| 是谓天地之根 | nimi ni li mama sewi li mama ma. | Is called “the root of Heaven and Earth.”
+| 是谓天地<!--之-->根 | nimi ni li mama sewi li mama ma. | Is called “the root of Heaven and Earth.”
 | 系系若存     | _linja linja li sama awen._      | Continuous, seeming to remain.
 | 用之不勤     | kepeken taso pali ala.           | Use it without exertion.
 
