--- a/lipu-pi-nasin-sewi/7.md
+++ b/lipu-pi-nasin-sewi/7.md
@@ -12,14 +12,14 @@ sidebar:
 
 {:.loseta}
 |:-:|-|-
-| 天长地久                  | sewi en ma li lon tenpo ale.                                   | Heaven and Earth last forever.
-| 天地所以<br/>能长且久者   | sewi en ma li tenpo tan ni la:                                 | The reason that Heaven and Earth are able to last forever
-| 以其不自生                | ona li mama ala e ona.                                         | Is because they do not give birth to themselves.
-| 故能长生                  | tan ni li ken lon e tenpo ale.                                 | Therefore, they are always alive.
-| 是以圣人<br/>后其身而身先 | sona ni la: jan sewi li monsi e jan sewi. taso, ona li sinpin. | Hence, the sage puts herself last and is first.
-| 外其身而身                | jan sewi li poka e jan sewi.  taso, ona li insa.               | She is outside herself and therefore her self lasts.
-| 非以其无私耶              | tan ala anu seme? pilin insa ona li len ala,                   | Is it not through her selflessness
-| 故能成其私                | la — ona li ken pona e pilin insa!                             | That she is able to perfect herself?
+| 天长地久                   | sewi en ma li lon tenpo ale.                                   | Heaven and Earth last forever.
+| 天地所以<wbr/>能长且久者   | sewi en ma li tenpo tan ni la:                                 | The reason that Heaven and Earth are able to last forever
+| 以其不自生                 | ona li mama ala e ona.                                         | Is because they do not give birth to themselves.
+| 故能长生                   | tan ni li ken lon e tenpo ale.                                 | Therefore, they are always alive.
+| 是以圣人<wbr/>后其身而身先 | sona ni la: jan sewi li monsi e jan sewi. taso, ona li sinpin. | Hence, the sage puts herself last and is first.
+| 外其身而身存               | jan sewi li poka e jan sewi. taso, ona li insa.                | She is outside herself and therefore her self lasts.
+| 非以其无私耶               | tan ala anu seme? pilin insa ona li len ala,                   | Is it not through her selflessness
+| 故能成其私                 | la— ona li ken pona e pilin insa!                              | That she is able to perfect herself?
 
 {% include kipisi-nav.html num=7 %}
 
